src/main/java/com/example/sqlvericek/Error/ErrorsTypeModel/ErrorType.java
package com.example.sqlvericek.Error.ErrorsTypeModel;

public class ErrorType {
    private String type;

    public String getType() {
        return type;
    }

    public void setType(String value) {
        this.type = value;
    }
}
